--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="@string/title_search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/action_switch"
-        android:title="Switch"
+        android:title="@string/title_switch"
         app:actionLayout="@layout/switch_item"
         app:showAsAction="always" />
 
@@ -13,10 +20,4 @@
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/title_new_contact"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/title_search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 </menu>
