--- a/app/src/main/res/layout/activity_new_contact.xml
+++ b/app/src/main/res/layout/activity_new_contact.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:hint="70 kg"
+        android:inputType="number"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toStartOf="@+id/detailTelephone"
@@ -40,6 +41,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:hint="20 years old"
+        android:inputType="number"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +55,7 @@
         android:layout_marginEnd="32dp"
         android:minHeight="48dp"
         android:hint="5566778899"
+        android:inputType="phone"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
