--- a/app/src/main/res/layout/activity_new_contact.xml
+++ b/app/src/main/res/layout/activity_new_contact.xml
@@ -26,7 +26,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:hint="70 kg"
-        android:inputType="number"
+        android:inputType="numberDecimal"
+        android:singleLine="true"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toStartOf="@+id/detailTelephone"
@@ -42,6 +43,7 @@
         android:layout_marginTop="8dp"
         android:hint="20 years old"
         android:inputType="number"
+        android:singleLine="true"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +58,7 @@
         android:minHeight="48dp"
         android:hint="5566778899"
         android:inputType="phone"
+        android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -80,6 +83,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:hint="Name"
+        android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailPicture" />
@@ -92,6 +96,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:hint="Company"
+        android:singleLine="true"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,6 +161,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:hint="email@email.com"
+        android:singleLine="true"
+        android:inputType="textEmailAddress"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,6 +175,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:hint="State of México"
+        android:inputType="textPostalAddress"
+        android:singleLine="true"
         android:minHeight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -180,6 +189,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:hint="Surname"
+        android:singleLine="true"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
